Allow assistance table to be scrollable

--- a/src/app/assistance/admin-assistance/admin-assistance.component.html
+++ b/src/app/assistance/admin-assistance/admin-assistance.component.html
@@ -2,7 +2,8 @@
           [nzLoading]="isLoading"
           [nzPageIndex]="pageIndex"
           [nzPageSize]="pageSize"
-          [nzData]="listOfAssistanceRecord">
+          [nzData]="listOfAssistanceRecord"
+          [nzScroll]="{x: '960px'}">
   <thead>
   <tr>
     <th>No.</th>
