--- a/src/app/assistance/user-assistance/user-assistance.component.html
+++ b/src/app/assistance/user-assistance/user-assistance.component.html
@@ -11,7 +11,8 @@
           [(nzPageIndex)]="pageIndex"
           [(nzPageSize)]="pageSize"
           [nzData]="listOfAssistanceRecord"
-          [nzLoading]="isLoading">
+          [nzLoading]="isLoading"
+          [nzScroll]="{x: '960px'}">
   <thead>
   <tr>
     <th>No.</th>
