Added appointment route, allow retrieve appointment list, cancel and update appointment's datetime

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,11 @@
         <a nz-button nzType="link">Assistance</a>
       </li>
 
+      <li nz-menu-item nzMatchRouter routerLink="/appointment" (click)="minimizeSidebar()">
+        <i nz-icon nzType="file-search"></i>
+        <a nz-button nzType="link">Appointment</a>
+      </li>
+
       <li nz-menu-item nzMatchRouter routerLink="/about" (click)="minimizeSidebar()">
         <i nz-icon nzType="info"></i>
         <a nz-button nzType="link">About Us</a>
