Fix appointment tab in sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
         <a nz-button nzType="link">Assistance</a>
       </li>
 
-      <li nz-menu-item nzMatchRouter routerLink="/appointment" (click)="minimizeSidebar()">
+      <li nz-menu-item nzMatchRouter *ngIf="user" routerLink="/appointment" (click)="minimizeSidebar()">
         <i nz-icon nzType="file-search"></i>
         <a nz-button nzType="link">Appointment</a>
       </li>
