--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -29,12 +29,10 @@
     </nz-form-control>
   </nz-form-item>
 
-  <nz-form-item *ngIf="incorrectLogin">
+  <nz-form-item *ngIf="errorMsg">
     <nz-col [nzSm]="6" [nzXs]="24"></nz-col>
     <nz-col [nzSm]="18" [nzXs]="24">
-      <div nz-col [nzSpan]="6" style="color: #ff4d4f">
-        Incorrect username/password.
-      </div>
+      <nz-col style="color: #ff4d4f">{{errorMsg}}</nz-col>
     </nz-col>
   </nz-form-item>
 
@@ -50,7 +48,7 @@
   <nz-row>
     <nz-col [nzSm]="6" nzXs="24"></nz-col>
     <nz-col [nzSm]="18" nzXs="24">
-      <button nz-button nzType="primary" [nzLoading]="submitted" (click)="submitForm()">Log In</button>
+      <button nz-button nzType="primary" [nzLoading]="submitted" [disabled]="!loginForm.valid" (click)="submitForm()">Log In</button>
       or <a [routerLink]="'../signup'"> register now! </a>
     </nz-col>
   </nz-row>
