--- a/src/app/assistance/assistance-detail/assistance-detail.component.html
+++ b/src/app/assistance/assistance-detail/assistance-detail.component.html
@@ -98,14 +98,14 @@
         <nz-form-item class="mb-2">
           <nz-form-label [nzSm]="24" [nzMd]="7" class="fw-bold text-start">Created Date</nz-form-label>
           <nz-form-control [nzSm]="24" [nzMd]="16">
-            <span>{{ (assistanceRecord?.createdDate | date: 'medium') || "-"}}</span>
+            <span>{{ (assistanceRecord?.createdDate | date: DATE_FORMAT) || "-"}}</span>
           </nz-form-control>
         </nz-form-item>
 
         <nz-form-item class="mb-2">
           <nz-form-label [nzSm]="24" [nzMd]="7" class="fw-bold text-start">Last Updated Date</nz-form-label>
           <nz-form-control [nzSm]="24" [nzMd]="16">
-            <span>{{(assistanceRecord?.lastUpdatedDate | date: 'medium') || "-"}}</span>
+            <span>{{(assistanceRecord?.lastUpdatedDate | date: DATE_FORMAT) || "-"}}</span>
           </nz-form-control>
         </nz-form-item>
 
